# NaughtySVN

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.in  intltool-extract  intltool-extract.in  intltool-merge  intltool-merge.in  intltool-update  intltool-update.in
docs/: doxygen.conf
m4/: subversion.m4
nautilus/: Makefile.am  Makefile.in  naughtysvn-module.c  nautilus-naughtysvn.c  nautilus-naughtysvn.h
nautilus/48x48/emblems/: Makefile.am  emblem-svn-added.icon  emblem-svn-added.xcf  emblem-svn-conflict.icon  emblem-svn-conflict.xcf  emblem-svn-deleted.icon  emblem-svn-deleted.xcf  emblem-svn-modified.icon  emblem-svn-modified.xcf  emblem-svn-normal.icon  emblem-svn-normal.xcf
notes/: Gnome_Human_Interface_Guideline.txt  arch  gconf  gconf.ps  implementation_nautilus_menu  implementation_repos_creation  implementation_svn_wc_update  implementation_wc_add  nautilus_emblems_hack.txt
nsvn/: Makefile.am  Makefile.in  dlg_aboutnsvn.c  dlg_aboutnsvn.h  dlg_add.c  dlg_add.h  dlg_auth.c  dlg_auth.h  dlg_checkout.c  dlg_checkout.h  dlg_commit.c  dlg_commit.h  dlg_log.c  dlg_log.h  dlg_preferences.c  dlg_preferences.h  dlg_reposcreate.c  dlg_reposcreate.h  dlg_result.c  dlg_result.h  dlg_update.c  dlg_update.h  gconf.c  gconf.h  global.c  global.h  main.c  naughtysvn.glade  naughtysvn.gladep  naughtysvn.schemas  window_list.h
pixmaps/: Makefile.am
po/: POTFILES.in  es.po  es_AR.po  fr.po
svn/: Makefile.am  Makefile.in  dlg_auth.c  dlg_auth.h  libnaughtysvn.pc.in  libsvn-naughtysvn.pc  libsvn-naughtysvn.pc.in  naughtysvn.h  svn-nsvn-admin.c  svn-nsvn-auth.c  svn-nsvn-common.c  svn-nsvn-init.c  svn-nsvn-private.h  svn-nsvn-repos.c  svn-nsvn-types.h  svn-nsvn-wc.c  svn_naughtysvn.h
www/: index.html  nsvn_license.html  roadmap.html  screenshots.html
www/logo/: nsvn_logo_650x680.eps  nsvn_logo_hor_468x64.eps
