dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.52)

NAUGHTYSVN_MAJOR_VERSION=0
NAUGHTYSVN_MINOR_VERSION=0
NAUGHTYSVN_MICRO_VERSION=1
NAUGHTYSVN_VERSION=$NAUGHTYSVN_MAJOR_VERSION.$NAUGHTYSVN_MINOR_VERSION.$NAUGHTYSVN_MICRO_VERSION
AC_SUBST(NAUGHTYSVN_MAJOR_VERSION)
AC_SUBST(NAUGHTYSVN_MINOR_VERSION)
AC_SUBST(NAUGHTYSVN_MICRO_VERSION)
AC_SUBST(NAUGHTYSVN_VERSION)

dnl FIXME: replace AC_INIT version with $NAUGHTYSVN_VERSION.
AC_INIT(NaughtySVN, 0.0.1)
AM_INIT_AUTOMAKE($PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AM_LANGINFO_CODESET
gl_GLIBC21
AC_ISC_POSIX
AM_ICONV_LINKFLAGS_BODY
AM_ICONV_LINK
AM_ICONV
gt_LC_MESSAGES
AM_CHECK_SVN_HEADER
AM_CHECK_SVN_LIB

dnl AC_PATH_PROG(SVN_CONFIG, svn-config, no)
dnl if test "`cd $srcdir && pwd`" != "`pwd`" &&
dnl   test -x $srcdir/svn-config; then

dnl SVN_CONFIG = "`$srcdir/svn-config --cflags`"
dnl AC_MSG_CHECKING($SVN_CONFIG)
dnl fi
dnl else
dnl   AC_MSG_ERROR([$svn-config not found; required])
dnl fi

dnl Minimum versions of the libraries
GLIB_REQUIRED=2.6.0
GTK_REQUIRED=2.6.0
LIBGNOME_REQUIRED=2.6.0
LIBGNOMEUI_REQUIRED=2.6.0
GNOME_VFS_REQUIRED=2.9.0
LIBGLADE_REQUIRED=2.4.0
BONOBO_ACTIVATION_REQUIRED=1.0.0
LIBBONOBO_REQUIRED=2.6.0
LIBBONOBOUI_REQUIRED=2.6.0
NAUTILUS_REQUIRED=2.9.0
SVN_REQUIRED=1.3

AC_SUBST(GLIB_REQUIRED)
AC_SUBST(GTK_REQUIRED)
AC_SUBST(LIBGNOME_REQUIRED)
AC_SUBST(LIBGNOMEUI_REQUIRED)
AC_SUBST(GNOME_VFS_REQUIRED)
AC_SUBST(LIBGLADE_REQUIRED)
AC_SUBST(BONOBO_ACTIVATION_REQUIRED)
AC_SUBST(LIBBONOBO_REQUIRED)
AC_SUBST(LIBBONOBOUI_REQUIRED)
AC_SUBST(NAUTILUS_REQUIRED)

PKG_CHECK_MODULES(PACKAGE,
        glib-2.0 >= $GLIB_REQUIRED
        gthread-2.0
        gtk+-2.0 >= $GTK_REQUIRED
        libgnome-2.0 >= $LIBGNOME_REQUIRED
        libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED
        gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED
        gnome-vfs-module-2.0
        libglade-2.0 >= $LIBGLADE_REQUIRED
        bonobo-activation-2.0 >= $BONOBO_ACTIVATION_REQUIRED)

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl Checking for apr-config
AC_PATH_PROG(APRCONFIGTOOL, apr-config, no)
if test x"$APRCONFIGTOOL" = xno; then
  AC_MSG_ERROR([apr-config executable not found - should be installed with Apache])
fi

PKG_CHECK_MODULES(NAUTILUS,
   libnautilus-extension >= $NAUTILUS_REQUIRED
   glib-2.0 >= $GLIB_REQUIRED)

AC_SUBST(NAUTILUS_CFLAGS)
AC_SUBST(NAUTILUS_LIBS)

dnl AC_MSG_CHECKING([for Subversion libraries])
dnl SVN_LIBS="`svn-config --libs`"
dnl here add check for Berkeley Db and SVN library

GETTEXT_PACKAGE=nsvn
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL

dnl Checking for gconf
AC_ARG_ENABLE(schemas-install,AC_HELP_STRING([--disable-schemas-install],
                                             [Disable installation of the gconf schemas]))

AM_CONDITIONAL(SCHEMAS_INSTALL, test x$enable_schemas_install != xno)

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
if test x"$GCONFTOOL" = xno; then
  AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
fi
AM_GCONF_SOURCE_2

AC_OUTPUT([
Makefile
nautilus/Makefile
svn/Makefile
nsvn/Makefile
po/Makefile.in
packages/naughtysvn.spec
])

echo "

Configuration:

        Source code location:   ${srcdir}
        Compiler:               ${CC}
        Internal mkdtemp:       ${mkdtemp_missing}

"

