size = 48x48
context = emblems
iconsdir = $(themedir)/$(size)/$(context)
pngdir = $(iconsdir)

icons_DATA = emblem-svn-added.icon \
             emblem-svn-conflict.icon \
             emblem-svn-deleted.icon \
             emblem-svn-modified.icon \
             emblem-svn-normal.icon

png_DATA = emblem-svn-added.png \
           emblem-svn-conflict.png \
           emblem-svn-deleted.png \
           emblem-svn-modified.png \
           emblem-svn-normal.png

EXTRA_DIST = $(icons_DATA) $(png_DATA)
